--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free html website design</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-b" data-filter="true" style="padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best bootstrap site generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-b" data-filter="true" style="padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
@@ -336,7 +336,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Get Deals and Coupons">
-                        <input type="hidden" value="C/Nq8yRtIAUuN6doAiaK+7UX2E230a3Gv9U9sKfPY8xVbBIenenC3+Z0D1U8TV1v3JtAp3Enlz84+XguCVkgRjRE/aK+cmiKz8eCWtClJxoJ9XHWGoiKq9p+BnZlYCEc" data-form-email="true">
+                        <input type="hidden" value="LW9K6bg58X9BNl8s5FfKMfiKeDkEYtZgRTmiluR0ZDuOdzRIb2t/twJF9gUKEplWyqJUQBMdd0qPopWnsLg4t+u9f3TwpK9VZoYeY+A/EdTD8xDKRzGAHE+gWH63pbUG" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-g-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
