--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap web site generator software download</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-b" data-filter="true" style="padding-top: 0rem; padding-bottom: 0rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple web page building</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel" id="gallery4-b" data-filter="true" style="padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
@@ -336,7 +336,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Get Deals and Coupons">
-                        <input type="hidden" value="vtj1FWVROiIBUVCRVRGqvgVLlgduvE7j0LdVKlvrYknVA91pWzXIke5fjVz3PjTmxdzpt31hKmswYZTSKRJfRQsMCPz0gc2b9J9B1iEa0ganRaDo9u+/QvKos2zY84M1" data-form-email="true">
+                        <input type="hidden" value="JeTkNn4RDIhAwd+1RHkCl3+ZFwWvABpgW9YwmoyVbnCdMDkEw/Ty/fm6vx1ccB7ERYZBZiRxpVUqFDXlBak+/02Sy8PuDxskZefOkPRqmiscD36FWj2xDWeex3v0CyOm" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-g-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-primary">SUBSCRIBE</button></span>
